# internal/handler/response/category.go
@@ -1,6 +1,10 @@
 package response
 
-import "time"
+import (
+	"time"
+
+	"github.com/o-ga09/web-ya-hime/internal/domain/category"
+)
 
 type CategoryResponse struct {
 	ID        string    `json:"id"`
@@ -11,4 +15,21 @@ type CategoryResponse struct {
 
 type CategoryListResponse struct {
 	Categories []CategoryResponse `json:"categories"`
+}
+
+func ToCategoryResponse(catRes *category.Category) *CategoryResponse {
+	return &CategoryResponse{
+		ID:        catRes.ID,
+		Name:      catRes.Name,
+		CreatedAt: catRes.CreatedAt,
+		UpdatedAt: catRes.UpdatedAt,
+	}
+}
+
+func ToCategoriesListResponse(cats []*category.Category) []*CategoryResponse {
+	res := make([]*CategoryResponse, len(cats))
+	for i, c := range cats {
+		res[i] = ToCategoryResponse(c)
+	}
+	return res
 }
